# trading_engine_ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  JOURNAL.md  Procfile  README.md  SPEC.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.toml  universe.yaml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 1b5715fb9232_add_predict_loop_config_table.py  26dca4757036_add_prediction_table.py  44e2f028ba06_add_hypothesis_hypothesis_belief_.py  4dd240b2722e_add_trade_rejected_to_prediction_and_.py  60993312d4d0_initial_journal_tables.py  6b0f3a85b65d_add_prediction_in_tracked_universe_field.py  (+10 more)
docs/: anticipatory_prediction_mode.md  bias_review.md  deployment.md  prediction_pipeline.md
tests/: conftest.py  test_alpaca_client.py  test_alpaca_news.py  test_anticipatory_pipeline.py  test_anticipatory_trading.py  test_backtest_engine.py  test_bars_network.py  test_cli.py  test_dashboard.py  test_events.py  test_hypothesis_registry.py  test_journal_registry.py  test_live_loop.py  test_manual_trading.py  test_metrics.py  test_news.py  test_observability.py  test_paper_only_guard.py  test_perturbation.py  test_polymarket.py  test_prediction_cli_client.py  test_prediction_client.py  test_prediction_factory.py  test_prediction_pipeline.py  test_prediction_registry.py  test_prediction_trading.py  test_reconcile.py  test_risk_gate.py  test_risk_resolve.py  test_router.py  test_sentiment.py  test_signal_translation.py  test_snapshot.py  test_strategies.py  test_technical_strategies.py  test_universe.py
(+80 files in other folders)
