[project]
name = "trading-engine"
version = "0.1.0"
description = "News-driven trading research engine (paper trading only)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "yfinance>=0.2.40",
    "feedparser>=6.0",
    "vaderSentiment>=3.3.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
    "ruff>=0.5",
]

[project.scripts]
engine = "engine.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "network: hits a real external network service (yfinance, RSS); skip with -m 'not network'",
]

[tool.ruff]
line-length = 100
